--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
         <div class="brand_logo">
           <img src="/src/assets/img/logo.png">
           <div class="brand_logo-text">
-            <p class="text">Senior Partner</p>
+            <p class="text">Centalia Anime Tracker</p>
           </div>
         </div>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__items text">Anime</li>
+            <li class="nav__items text">Manga</li>
+            <li class="nav__items text">List</li>
+          </ul>
+        </nav>
       </div>
     </header>
+    <main>
+
+    </main>
   </body>  
 </html>
