Add Function renderGrid and addAnime

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="tracker-grid__border">Title</div>
         <div class="tracker-grid__border">Type</div>
         <div class="tracker-grid__border">Season</div>
-        <div class="tracker-grid__border">Progress</div>
-        <div class="tracker-grid__border">Score</div>
+        <div class="tracker-grid__border">Episodes</div>
+        <div class="tracker-grid__border">Wacthed</div>
       </div>
       <div class="tracker-grid text" id="tracker-body"></div>
     </main>
