--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
       <div class="tracker-grid text" id="tracker-body"></div>
     </main>
     <script type="module" src="/src/js/main.js"></script>
+    <!-- <script type="module" src="/src/js/css.js"></script> -->
   </body>  
 </html>
