Added filter by status

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
             <p class="text">Centalia Anime Tracker</p>
           </div>
         </div>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__items text"><a href="#">Anime</a></li>
-            <li class="nav__items text"><a href="#">Manga</a></li>
-            <li class="nav__items text"><a href="#">List</a></li>
-          </ul>
-        </nav>
       </div>
     </header>
     <main>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__items">В планах</li>
+          <li class="nav__items">Смотрю</li>
+          <li class="nav__items">Просмотрено</li>
+          <li class="nav__items">Отложено</li>
+          <li class="nav__items">Брошено</li>
+        </ul>
+      </nav>
+
       <div class="tracker-grid text" id="tracker-header">
         <div class="tracker-grid__border"></div>
         <div class="tracker-grid__border">#</div>
