Added sorting by progress

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="tracker-grid text" id="tracker-body"></div>
     </main>
-    <script type="module" src="/src/js/main.js"></script>
-    <!-- <script type="module" src="/src/js/css.js"></script> -->
+    <script src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/css.js"></script>
   </body>  
 </html>
