--- a/index.html
+++ b/index.html
@@ -15,15 +15,29 @@
           </div>
         </div>
       </div>
+      <div class="add-anime-form">
+        <input type="text" id="anime-title" placeholder="Название тайтла">
+        <input type="number" id="anime-episodes" placeholder="Всего эпизодов">
+        <select id="anime-status">
+          <option value="watching">Смотрю</option>
+          <option value="completed">Просмотрено</option>
+          <option value="on_hold">Отложено</option>
+          <option value="dropped">Брошено</option>
+          <option value="plan_to_watch">В планах</option>
+        </select>
+        <button onclick="addAnimeFromForm()">Добавить Аниме</button>
+      </div>
+      
     </header>
     <main>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__items">В планах</li>
-          <li class="nav__items">Смотрю</li>
-          <li class="nav__items">Просмотрено</li>
-          <li class="nav__items">Отложено</li>
-          <li class="nav__items">Брошено</li>
+          <li class="nav__items"><button onclick="setFilter(null)">Всё аниме</button></li>
+          <li class="nav__items"><button onclick="setFilter('plan_to_watch')">В планах</button></li>
+          <li class="nav__items"><button onclick="setFilter('watching')">Смотрю</button></li>
+          <li class="nav__items"><button onclick="setFilter('completed')">Просмотрено</button></li>
+          <li class="nav__items"><button onclick="setFilter('on_hold')">Отложено</button></li>
+          <li class="nav__items"><button onclick="setFilter('dropper')">Брошено</button></li>
         </ul>
       </nav>
 
