--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,7 @@
 
     <div class="toast"></div>
 
-    <script src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
     <script type="module" src="/src/js/css.js"></script>
   </body>  
 </html>
