--- a/client/index.html
+++ b/client/index.html
@@ -6,55 +6,77 @@
     <title>Tracker</title>
   </head>
   <body>
-    <div class="animeTracker">
-      <div class="animeTracker__header">
-        <div class="animeTracker__search">
-          <input class="animeTracker__search-input" type="text" id="animeSearch" placeholder="Поиск">
-          <button class="animeTracker__search-btn" type="button">
-            <svg class="btn_icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M14 14L11.1 11.1M12.6667 7.33333C12.6667 10.2789 10.2789 12.6667 7.33333 12.6667C4.38781 12.6667 2 10.2789 2 7.33333C2 4.38781 4.38781 2 7.33333 2C10.2789 2 12.6667 4.38781 12.6667 7.33333Z" stroke="#1E1E1E" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
-          </button>
-        </div>
+    <header class="header">
+      <div class="header__search">
+        <input class="header__search-input" type="text" id="animeSearch" placeholder="Поиск">
+        <button class="header__search-btn" type="button">
+          <svg class="btn_icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M14 14L11.1 11.1M12.6667 7.33333C12.6667 10.2789 10.2789 12.6667 7.33333 12.6667C4.38781 12.6667 2 10.2789 2 7.33333C2 4.38781 4.38781 2 7.33333 2C10.2789 2 12.6667 4.38781 12.6667 7.33333Z" stroke="#1E1E1E" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+        </button>
       </div>
-      <div class="animeTracker__nav">
-        <ul class="animeTracker__nav-list">
+    </header>
+
+    <main class="tracker">
+      <nav class="tracker-nav">
+        <ul class="tracker-nav__list">
           <li>
-            <button class="btn-filter animeTracker__nav-items" onclick="setFilter(null)">
+            <button class="tracker-nav__items" onclick="setFilter(null)">
               Всё аниме
             </button>
           </li>
           <li>
-            <button class="btn-filter animeTracker__nav-items" onclick="setFilter('plan_to_watch')">
+            <button class="tracker-nav__items" onclick="setFilter('plan_to_watch')">
               В планах
             </button>
           </li>
           <li>
-            <button class="btn-filter animeTracker__nav-items" onclick="setFilter('watching')">
+            <button class="tracker-nav__items" onclick="setFilter('watching')">
               Смотрю
             </button>
           </li>
           <li>
-            <button class="btn-filter animeTracker__nav-items" onclick="setFilter('completed')">
+            <button class="tracker-nav__items" onclick="setFilter('completed')">
               Просмотрено
             </button>
           </li>
           <li>
-            <button class="btn-filter animeTracker__nav-items" onclick="setFilter('on_hold')">
+            <button class="tracker-nav__items" onclick="setFilter('on_hold')">
               Отложено
             </button>
           </li>
           <li>
-            <button class="btn-filter animeTracker__nav-items" onclick="setFilter('dropper')">
+            <button class="tracker-nav__items" onclick="setFilter('dropper')">
               Брошено
             </button>
           </li>
         </ul>
-      </div>
-      <div class="animeTracker__form">
-
-      </div>
-    </div>
+      </nav>
+      <section class="tracker-table" role="table" >
+        <div class="tracker-table__header" role="rowgroup">
+            <div class="row row_header" role="row">
+              <div class="col" role="columnheader">#</div>
+              <div class="col" role="columnheader">Title</div>  
+              <div class="col" role="columnheader">Episode</div>
+            </div>            
+            <div class="row" role="row">
+              <div class="col" role="columnheader">1</div>
+              <div class="col" role="columnheader">Атака на титанов</div>  
+              <div class="col" role="columnheader">23</div>
+            </div>            
+            <div class="row" role="row">
+              <div class="col" role="columnheader">2</div>
+              <div class="col" role="columnheader">Рубеж Шангри-Ла</div>  
+              <div class="col" role="columnheader">26</div>
+            </div>            
+            <div class="row" role="row">
+              <div class="col" role="columnheader">3</div>
+              <div class="col" role="columnheader">Вампир не умеет сосать</div>  
+              <div class="col" role="columnheader">12</div>
+            </div>
+        </div>      
+      </section>
+    </main>
 
     <!-- <header>
       <div class="head_container">
@@ -97,14 +119,6 @@
       <div class="overlay hidden"></div>
     </header>
     <main>
-      
-      <div class="tracker-grid text" id="tracker-header">
-        <div class="tracker-grid__border"></div>
-        <div class="tracker-grid__border">#</div>
-        <div class="tracker-grid__border">Title</div>
-        <div class="tracker-grid__border">Episodes</div>
-      </div>
-      <div class="tracker-grid text" id="tracker-body"></div>
     </main>
 
     <div class="toast"></div> -->
