Started making statuses

--- a/client/index.html
+++ b/client/index.html
@@ -57,22 +57,38 @@
             <div class="row row_header" role="row">
               <div class="col" role="columnheader">#</div>
               <div class="col" role="columnheader">Title</div>  
+              <div class="col" role="columnheader">Status</div>  
               <div class="col" role="columnheader">Episode</div>
             </div>            
             <div class="row" role="row">
               <div class="col" role="columnheader">1</div>
               <div class="col" role="columnheader">Атака на титанов</div>  
+              <div class="col" role="columnheader">Смотрю</div>  
               <div class="col" role="columnheader">23</div>
             </div>            
             <div class="row" role="row">
               <div class="col" role="columnheader">2</div>
               <div class="col" role="columnheader">Рубеж Шангри-Ла</div>  
+              <div class="col" role="columnheader">В планах</div>  
               <div class="col" role="columnheader">26</div>
             </div>            
             <div class="row" role="row">
               <div class="col" role="columnheader">3</div>
               <div class="col" role="columnheader">Вампир не умеет сосать</div>  
+              <div class="col" role="columnheader">Отложено</div>  
               <div class="col" role="columnheader">12</div>
+            </div>            
+            <div class="row" role="row">
+              <div class="col" role="columnheader">4</div>
+              <div class="col" role="columnheader">Первородный грех Такопи</div>  
+              <div class="col" role="columnheader">Брошено</div>  
+              <div class="col" role="columnheader">12</div>
+            </div>            
+            <div class="row" role="row">
+              <div class="col" role="columnheader">5</div>
+              <div class="col" role="columnheader">Наруто</div>  
+              <div class="col" role="columnheader">Просмотрено</div>  
+              <div class="col" role="columnheader">720</div>
             </div>
         </div>      
       </section>
