--- a/client/index.html
+++ b/client/index.html
@@ -61,34 +61,34 @@
               <div class="col" role="columnheader">Episode</div>
             </div>            
             <div class="row" role="row">
-              <div class="col" role="columnheader">1</div>
-              <div class="col" role="columnheader">Атака на титанов</div>  
-              <div class="col" role="columnheader">Смотрю</div>  
-              <div class="col" role="columnheader">23</div>
+              <div class="col" role="columnbody">1</div>
+              <div class="col" role="columnbody">Атака на титанов</div>  
+              <div class="col status status--watching" role="columnbody">Смотрю</div>  
+              <div class="col" role="columnbody">23</div>
             </div>            
             <div class="row" role="row">
-              <div class="col" role="columnheader">2</div>
-              <div class="col" role="columnheader">Рубеж Шангри-Ла</div>  
-              <div class="col" role="columnheader">В планах</div>  
-              <div class="col" role="columnheader">26</div>
+              <div class="col" role="columnbody">2</div>
+              <div class="col" role="columnbody">Рубеж Шангри-Ла</div>  
+              <div class="col status status--planned" role="columnbody">В планах</div>  
+              <div class="col" role="columnbody">26</div>
             </div>            
             <div class="row" role="row">
-              <div class="col" role="columnheader">3</div>
-              <div class="col" role="columnheader">Вампир не умеет сосать</div>  
-              <div class="col" role="columnheader">Отложено</div>  
-              <div class="col" role="columnheader">12</div>
+              <div class="col" role="columnbody">3</div>
+              <div class="col" role="columnbody">Вампир не умеет сосать</div>  
+              <div class="col status status--on-hold" role="columnbody">Отложено</div>  
+              <div class="col" role="columnbody">12</div>
             </div>            
             <div class="row" role="row">
-              <div class="col" role="columnheader">4</div>
-              <div class="col" role="columnheader">Первородный грех Такопи</div>  
-              <div class="col" role="columnheader">Брошено</div>  
-              <div class="col" role="columnheader">12</div>
+              <div class="col" role="columnbody">4</div>
+              <div class="col" role="columnbody">Первородный грех Такопи</div>  
+              <div class="col status status--dropped" role="columnbody">Брошено</div>  
+              <div class="col" role="columnbody">12</div>
             </div>            
             <div class="row" role="row">
-              <div class="col" role="columnheader">5</div>
-              <div class="col" role="columnheader">Наруто</div>  
-              <div class="col" role="columnheader">Просмотрено</div>  
-              <div class="col" role="columnheader">720</div>
+              <div class="col" role="columnbody">5</div>
+              <div class="col" role="columnbody">Наруто</div>  
+              <div class="col status status--completed" role="columnbody">Просмотрено</div>  
+              <div class="col" role="columnbody">720</div>
             </div>
         </div>      
       </section>
