Started develop modal

--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,22 @@
   </head>
   <body>
     <header class="header">
+      <nav class="header-nav">
+        <ul class="header-nav__list">
+          <li class="header-nav__items">Anime</li>
+          <li class="header-nav__items">Manga</li>
+          <li class="header-nav__items">Ranobe</li>
+        </ul>
+      </nav>
       <div class="header__search">
         <input class="header__search-input" type="text" id="animeSearch" placeholder="Поиск">
-        <button class="header__search-btn" type="button">
+        <button class="header-btn header-btn--search" type="button">
           <svg class="btn_icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M14 14L11.1 11.1M12.6667 7.33333C12.6667 10.2789 10.2789 12.6667 7.33333 12.6667C4.38781 12.6667 2 10.2789 2 7.33333C2 4.38781 4.38781 2 7.33333 2C10.2789 2 12.6667 4.38781 12.6667 7.33333Z" stroke="#1E1E1E" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-      </svg>
+          </svg>
         </button>
       </div>
+      <button class="header-btn header-btn--add">Добавить в список</button>
     </header>
 
     <main class="tracker">
@@ -92,20 +100,14 @@
             </div>
         </div>      
       </section>
+      <section class="tracker-modal">
+        <div class="modal-header">
+          <h3>Добавление тайтла</h3>
+        </div>
+      </section>
     </main>
 
     <!-- <header>
-      <div class="head_container">
-        <div class="brand_logo">
-          <img src="/src/assets/img/logo.png">
-          <div class="brand_logo-text">
-            <p class="text">Centalia Anime Tracker</p>
-          </div>
-        </div>
-      </div>
-      <div class="add-title-btn">
-        <button class="show-modal">Добавить в список</button>
-      </div>
       <div class="modal hidden">
         <div class="modal-content">
           <div class="modal-header">
