Add button, label and input

--- a/client/index.html
+++ b/client/index.html
@@ -101,8 +101,27 @@
         </div>      
       </section>
       <section class="tracker-modal">
-        <div class="modal-header">
-          <h3>Добавление тайтла</h3>
+        <div class="tracker-modal__header">
+            <h3 class="tracker-modal__header--text">Добавление тайтла</h3>
+            <button class="tracker-modal__btn--close">&times;</button>
+        </div>
+        <div class="tracker-modal__body">
+          <div class="tracker-modal__form">
+            <label class="tracker-modal__label">Название тайтла: 
+              <input class="tracker-modal__input"></label>
+            <label class="tracker-modal__label">Прогресс просмотра: 
+              <input class="tracker-modal__input"></label>
+            <p class="tracker-modal__label--text">Статус просмотра: 
+              <select class="tracker-modal__select">
+                <option value="watching">Смотрю</option>
+                <option value="completed">Просмотрено</option>
+                <option value="on_hold">Отложено</option>
+                <option value="dropped">Брошено</option>
+                <option value="plan_to_watch">В планах</option>
+              </select>
+            </p>
+            <button type="button" class="tracker-modal__btn--add">Добавить</button>
+          </div>
         </div>
       </section>
     </main>
